--- a/encontro/pom.xml
+++ b/encontro/pom.xml
@@ -18,6 +18,12 @@
   		<scope>system</scope>
   		<systemPath>C:/Users/lucca/Oracle/ojdbc8.jar</systemPath>
   	</dependency>
+  	
+  	<dependency>
+    	<groupId>javax.xml.bind</groupId>
+    	<artifactId>jaxb-api</artifactId>
+    	<version>2.3.1</version>
+	</dependency>
   
   </dependencies>
   
